# MYJSON

./: .gitignore  CLAUDE.md  LICENSE  README.md  browser-test.js  bug-test-simple.js  bug-test-validation.js  edge-test.js  index.html  myjson-plugin.upx  package-lock.json  package.json  plugin.json  preload.js  vite.config.js  功能介绍.txt  功能概述.txt
.claude/: settings.local.json
docs/: JSON智能合并优化需求.md  JSON智能合并功能需求.md  JSON比较功能Bug测试报告.md  JSON比较功能测试报告.md  Schema功能需求文档.md  功能优化报告.md
public/fonts/: fonts.css
scripts/: copy-files.js  pack.js
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CompareEditor.vue  CompareStatusBar.vue  CompareToolbar.vue  ConvertResultPanel.vue  HistoryPanel.vue  JsonCompareView.vue  JsonConvertPanel.vue  JsonEditor.vue  JsonMergePanel.vue  JsonTreeView.vue  PathQueryPanel.vue  QueryResultPanel.vue  SaveDialog.vue  SaveSchemaDialog.vue  SchemaTemplateLibrary.vue  SchemaValidatorPanel.vue  StatusBar.vue  TableView.vue  ThreeWayMergeView.vue  ToolbarActions.vue  TreeNode.vue
src/composables/: useClipboard.js  useHistory.js  useJsonComparison.js  useJsonConverter.js  useJsonMerge.js  useJsonOperations.js  useJsonPath.js  useJsonStorage.js  useSchemaValidator.js
src/platform/: browser.js  index.js  tauri.js
src/styles/: fonts.css  main.css  theme-light.css
src/utils/: commentRemover.js  excelConverter.js  jsonComparer.js  jsonCompressor.js  jsonConverter.js  jsonFixer.js  (+8 more)
test/: schemaEdgeCases.test.js
